--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
+<!doctype html>
+<html lang="sv">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Exempel på mer avancerad hemsida</title>
+  <style>
+    :root {
+      --bg: #111;
+      --text: #f5f5f5;
+      --accent: #f1631d;
+      --secondary: #2a2a2a;
+      --radius: 12px;
+    }
+
+    * { box-sizing: border-box; }
+    html, body { height: 100%; margin: 0; font-family: system-ui, sans-serif; background: var(--bg); color: var(--text); }
+
+    header {
+      background: var(--secondary);
+      padding: 20px;
+      position: sticky;
+      top: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 100;
+    }
+
+    header h1 { margin: 0; font-size: 1.5rem; }
+
+    nav a {
+      margin-left: 16px;
+      text-decoration: none;
+      color: var(--text);
+      transition: color .3s;
+    }
+
+    nav a:hover { color: var(--accent); }
+
+    main {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    section {
+      margin-bottom: 60px;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 80px 20px;
+      background: linear-gradient(to bottom right, #222, #000);
+      border-radius: var(--radius);
+    }
+
+    .hero h2 {
+      font-size: 2.5rem;
+      margin-bottom: 14px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: var(--secondary);
+      padding: 20px;
+      border-radius: var(--radius);
+      box-shadow: 0 4px 12px rgba(0,0,0,.4);
+      transition: transform .3s;
+    }
+
+    .card:hover { transform: translateY(-5px); }
+
+    .card img {
+      width: 100%;
+      border-radius: var(--radius);
+      margin-bottom: 12px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: var(--secondary);
+      font-size: .9rem;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>SITEMANAGER</h1>
+    <nav>
+      <a href="#hero">Start</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#kontakt">Kontakt</a>
+    </nav>
+  </header>
+
+  <main>
+    <!-- Hero section -->
+    <section id="hero" class="hero">
+      <h2>Home</h2>
+      <p>The only thing we have to fear is fear itself</p>
+    </section>
+
+    <!-- Portfolio section -->
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <div class="grid">
+        <div class="card">
+          <img src="https://picsum.photos/400/250?random=1" alt="Projekt 1" />
+          <h3>Projekt</h3>
+          <p>Kort beskrivning av projektet</p>
+        </div>
+        <div class="card">
+          <img src="https://picsum.photos/400/250?random=2" alt="Projekt 2" />
+          <h3>Events</h3>
+          <p>Kort beskrivning av events</p>
+        </div>
+        <div class="card">
+          <img src="https://picsum.photos/400/250?random=3" alt="Projekt 3" />
+          <h3>Om oss</h3>
+          <p>Kort beskrivning om oss</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Kontakt section -->
+    <section id="kontakt">
+      <h2>Kontakt</h2>
+      <form>
+        <label for="namn">Namn</label><br>
+        <input type="text" id="namn" name="namn" style="width:100%;padding:8px;margin:8px 0;border-radius:var(--radius);border:none;"><br>
+
+        <label for="meddelande">Meddelande</label><br>
+        <textarea id="meddelande" name="meddelande" rows="5" style="width:100%;padding:8px;margin:8px 0;border-radius:var(--radius);border:none;"></textarea><br>
+
+        <button type="submit" style="background:var(--accent);color:#fff;padding:10px 20px;border:none;border-radius:var(--radius);cursor:pointer;">Skicka</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 Min Avancerade Sida. Alla rättigheter förbehållna.
+  </footer>
+</body>
+</html>
 
