la till index.html

--- a/index.html
+++ b/index.html
@@ -113,17 +113,23 @@
       <h2>Portfolio</h2>
       <div class="grid">
         <div class="card">
-          <img src="https://picsum.photos/400/250?random=1" alt="Projekt 1" />
+          <a href="https://exempel1.se" target="_blank">
+            <img src="https://picsum.photos/400/250?random=1" alt="Projekt 1" />
+          </a>
           <h3>Projekt</h3>
           <p>Kort beskrivning av projektet</p>
         </div>
         <div class="card">
-          <img src="https://picsum.photos/400/250?random=2" alt="Projekt 2" />
+          <a href="https://exempel2.se" target="_blank">
+            <img src="https://picsum.photos/400/250?random=2" alt="Projekt 2" />
+          </a>
           <h3>Events</h3>
           <p>Kort beskrivning av events</p>
         </div>
         <div class="card">
-          <img src="https://picsum.photos/400/250?random=3" alt="Projekt 3" />
+          <a href="https://exempel3.se" target="_blank">
+            <img src="https://picsum.photos/400/250?random=3" alt="Projekt 3" />
+          </a>
           <h3>Om oss</h3>
           <p>Kort beskrivning om oss</p>
         </div>
@@ -150,4 +156,3 @@
   </footer>
 </body>
 </html>
-
