jag bytte en länk

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <p>Kort beskrivning av projektet</p>
         </div>
         <div class="card">
-          <a href="https://exempel2.se" target="_blank">
+          <a href="https://mayadelorez.com" target="_blank">
             <img src="https://picsum.photos/400/250?random=2" alt="Projekt 2" />
           </a>
           <h3>Events</h3>
