--- a/index.html
+++ b/index.html
@@ -1,97 +1,269 @@
-<!doctype html>
-<html lang="sv">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Alma Carlsson – Portfolio</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            boldred: '#d62828',
-            dark: '#0b0b0b',
-            light: '#f3f3f3'
-          },
-          fontFamily: {
-            sans: ['Arial','Helvetica','sans-serif']
-          }
-        }
-      }
+  <title>Portfolio — Bold Landing</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
+  <style>
+    /* =====================
+       THEME VARIABLES
+       ===================== */
+    :root{
+      --bg:#0d0f12;
+      --fg:#e8ebef;
+      --muted:#aab3bf;
+      --accent:#3b82f6;
+      --card:#14171c;
+      --border:#1e232b;
+      --max:1100px;
+      --hero:url('images/1.jpg');
+      --pill-bg:rgba(255,255,255,.02);
+      --pill-border:#2a2f36;
+      --input-bg:#10141a;
+      --input-border:#262c35;
+      --btn-bg:var(--fg);
+      --btn-fg:#0b0d10;
+      --scrim:rgba(0,0,0,.35);
+      --shadow:0 8px 24px rgba(0,0,0,.25);
     }
-  </script>
-</head>
+    /* Light theme overrides */
+    :root[data-theme="light"]{
+      --bg:#f7f9fc;
+      --fg:#0d1117;
+      --muted:#5a6b80;
+      --accent:#2563eb;
+      --card:#ffffff;
+      --border:#e6eaf0;
+      --pill-bg:rgba(0,0,0,.04);
+      --pill-border:#d7dde6;
+      --input-bg:#ffffff;
+      --input-border:#d7dde6;
+      --btn-bg:#0d1117;
+      --btn-fg:#ffffff;
+      --scrim:rgba(255,255,255,.25);
+      --shadow:0 8px 24px rgba(10,16,25,.12);
+    }
 
-<body class="bg-light text-dark font-sans antialiased">
+    *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
+    body{
+      margin:0; font-family:"Inter",system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      color:var(--fg); background:var(--bg);
+      line-height:1.5; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+      transition:background-color .25s ease,color .25s ease;
+    }
+    a{color:inherit; text-decoration:none}
+    img{max-width:100%; display:block}
+
+    /* NAV */
+    .nav{position:fixed; inset-inline:0; top:0; z-index:30; display:flex; justify-content:center; backdrop-filter:saturate(180%) blur(10px);} 
+    .nav__inner{width:100%; max-width:var(--max); display:flex; align-items:center; gap:12px; padding:14px 20px;}
+    .brand{font-weight:800; letter-spacing:.04em}
+    .nav__spacer{flex:1}
+    .pill{border:1px solid var(--pill-border); padding:8px 14px; border-radius:999px; background:var(--pill-bg);} 
+    .nav__links{display:flex; gap:8px; flex-wrap:wrap}
+
+    /* Theme toggle */
+    .toggle{display:inline-flex; align-items:center; gap:8px; cursor:pointer; user-select:none}
+    .toggle button{border:1px solid var(--pill-border); background:var(--pill-bg); color:inherit; padding:8px 12px; border-radius:999px; font-weight:600}
+    .toggle button:focus{outline:2px solid var(--accent); outline-offset:2px}
+
+    /* HERO */
+    .hero{position:relative; height:100vh; display:grid; place-items:center; overflow:hidden; border-bottom:1px solid var(--border);} 
+    .hero__bg{position:absolute; inset:0; background:#000 var(--hero) center/cover no-repeat; filter:contrast(1.05) brightness(.85); transform:scale(1.02);} 
+    :root[data-theme="light"] .hero__bg{filter:contrast(1.02) brightness(.95);} 
+    .hero__scrim{position:absolute; inset:0; background:var(--scrim);} 
+    .hero__content{position:relative; z-index:1; width:min(92vw, var(--max)); text-align:left;}
+    .title{margin:0; line-height:.85; font-weight:900; letter-spacing:-.02em; font-size:clamp(60px, 18vw, 220px); text-transform:uppercase;}
+    .subtitle{margin:12px 0 0 0.1em; color:var(--muted); font-weight:600; font-size:clamp(18px, 3vw, 28px);} /* slightly right to sit under P */
+    .scroll-cue{position:absolute; bottom:28px; left:50%; transform:translateX(-50%); color:var(--muted); font-size:14px;}
+
+    /* LAYOUT */
+    section{padding:80px 20px}
+    .container{max-width:var(--max); margin-inline:auto}
+
+    #about p{color:var(--muted)}
+
+    /* PROJECTS */
+    .grid{display:grid; gap:16px}
+    @media(min-width:680px){.grid{grid-template-columns:repeat(2,1fr)}}
+    @media(min-width:1024px){.grid{grid-template-columns:repeat(3,1fr)}}
+    .card{background:var(--card); border:1px solid var(--border); border-radius:18px; overflow:hidden; box-shadow:var(--shadow)}
+    .card__img{aspect-ratio:16/10; background:#0b0d10}
+    :root[data-theme="light"] .card__img{background:#eef2f7}
+    .card__body{padding:16px}
+    .card__title{margin:0 0 6px 0; font-weight:700}
+    .card__title a{text-decoration:underline; text-underline-offset:3px}
+    .card__text{margin:0; color:var(--muted)}
+    .card__link{display:block}
+
+    /* CONTACT (centered) */
+    #contact .container{display:flex; justify-content:center; align-items:center;}
+    form{display:grid; gap:20px; width:100%; max-width:900px; margin:auto; text-align:left;}
+    form > div, form > button, form > p{width:100%;}
+    label{display:block; margin-bottom:6px;}
+    input, textarea{display:block; width:100%; padding:20px 22px; font-size:1.05rem; border-radius:14px; border:1px solid var(--input-border); background:var(--input-bg); color:var(--fg)}
+    textarea{min-height:180px; resize:vertical}
+    .btn{cursor:pointer; border:none; padding:18px 24px; font-size:1.1rem; border-radius:14px; background:var(--btn-bg); color:var(--btn-fg); font-weight:700; letter-spacing:.5px}
+    .note{text-align:center; color:var(--muted); font-size:14px}
+
+    footer{padding:40px 20px; border-top:1px solid var(--border); color:var(--muted); text-align:center}
+  </style>
+</head>
+<body>
+  <!-- NAV -->
+  <nav class="nav">
+    <div class="nav__inner">
+      <div class="brand pill">Portfolio</div>
+      <div class="nav__spacer"></div>
+      <div class="nav__links">
+        <a href="#about" class="pill">About Me</a>
+        <a href="#projects" class="pill">Projects</a>
+        <a href="#contact" class="pill">Contact</a>
+        <span class="toggle" aria-label="Theme toggle">
+          <button id="themeToggle" type="button" aria-pressed="false" title="Toggle light/dark">🌙 Dark</button>
+        </span>
+      </div>
+    </div>
+  </nav>
 
   <!-- HERO -->
-  <header class="relative w-full">
-    <img src="/images/hero.jpg" alt="Hero image" class="w-full h-[80vh] object-cover" />
-    <div class="absolute top-10 left-10">
-      <h1 class="text-6xl md:text-8xl font-extrabold uppercase text-boldred">PORTFOLIO</h1>
-      <p class="text-lg md:text-xl text-white mt-2">GROWTH MARKETER<br>2025</p>
+  <header class="hero">
+    <div class="hero__bg"></div>
+    <div class="hero__scrim"></div>
+    <div class="hero__content">
+      <h1 class="title">PORTFOLIO</h1>
+      <p class="subtitle">Fresh. Bold. Yours.</p>
     </div>
-    <div class="absolute bottom-10 right-10 text-white text-right">
-      <p class="text-sm">alma.carlsson@gmail.com</p>
-      <p class="text-sm">@almacarlsson</p>
-    </div>
+    <div class="scroll-cue">Scroll ↓</div>
   </header>
 
   <!-- ABOUT -->
-  <section class="grid md:grid-cols-2 gap-8 max-w-6xl mx-auto px-6 py-16 items-center">
-    <img src="/images/about.jpg" alt="About me" class="w-full object-cover" />
-    <div>
-      <h2 class="text-4xl font-bold uppercase">About Me</h2>
-      <p class="mt-4 text-lg">
-        Jag började min resa inom marknadsföring med fokus på experiment, analys och digital tillväxt.
-        Idag kombinerar jag kreativitet med data för att driva projekt framåt och skapa verklig effekt.
-      </p>
+  <section id="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>Write a short, punchy introduction here — who you are, what you love building, and the kinds of problems you solve.</p>
     </div>
   </section>
 
-  <!-- THREE LINKS -->
-  <section class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto px-6 py-16 text-center">
-    <a href="me-and-marketing/" class="group">
-      <img src="/images/me-marketing.jpg" alt="Me and Marketing" class="w-full h-64 object-cover" />
-      <h3 class="mt-3 text-xl font-bold uppercase text-boldred group-hover:underline">Me and Marketing</h3>
-    </a>
-    <a href="growth-marketing/" class="group">
-      <img src="/images/growth-marketing.jpg" alt="Growth Marketing" class="w-full h-64 object-cover" />
-      <h3 class="mt-3 text-xl font-bold uppercase text-boldred group-hover:underline">Growth Marketing</h3>
-    </a>
-    <a href="contact/" class="group">
-      <img src="/images/contact.jpg" alt="Contact" class="w-full h-64 object-cover" />
-      <h3 class="mt-3 text-xl font-bold uppercase text-boldred group-hover:underline">Contact</h3>
-    </a>
+  <!-- PROJECTS -->
+  <section id="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="grid">
+        <!-- Project 1 -->
+        <article class="card">
+          <a class="card__link" href="https://example.com/case-1" target="_blank" rel="noopener noreferrer" aria-label="Open Case 1 in a new tab">
+            <div class="card__img"><img src="images/project1.jpg" alt="Project 1 preview" /></div>
+          </a>
+          <div class="card__body">
+            <h3 class="card__title"><a href="https://example.com/case-1" target="_blank" rel="noopener noreferrer">Growth Case — Project One</a></h3>
+            <p class="card__text">Short impact line. e.g., +38% conversion in 6 weeks.</p>
+          </div>
+        </article>
+        <!-- Project 2 -->
+        <article class="card">
+          <a class="card__link" href="https://example.org/case-2" target="_blank" rel="noopener noreferrer" aria-label="Open Case 2 in a new tab">
+            <div class="card__img"><img src="images/project2.jpg" alt="Project 2 preview" /></div>
+          </a>
+          <div class="card__body">
+            <h3 class="card__title"><a href="https://example.org/case-2" target="_blank" rel="noopener noreferrer">UX Study — Project Two</a></h3>
+            <p class="card__text">Bounce rate ↓12% after redesign + faster checkout.</p>
+          </div>
+        </article>
+        <!-- Project 3 -->
+        <article class="card">
+          <a class="card__link" href="https://linktr.ee/yourname" target="_blank" rel="noopener noreferrer" aria-label="Open Project 3 link in a new tab">
+            <div class="card__img"><img src="images/project3.jpg" alt="Project 3 preview" /></div>
+          </a>
+          <div class="card__body">
+            <h3 class="card__title"><a href="https://linktr.ee/yourname" target="_blank" rel="noopener noreferrer">Campaign Reel — Project Three</a></h3>
+            <p class="card__text">30s video reel showcasing highlights (hosted externally).</p>
+          </div>
+        </article>
+      </div>
+    </div>
   </section>
 
-  <!-- CONTACT FORM -->
-  <section class="bg-light py-16 max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-8 items-center">
-    <div>
-      <h2 class="text-3xl font-bold uppercase text-boldred">Kontakta mig</h2>
-      <p class="mt-2">Skriv några rader om du vill snacka jobb, praktik eller samarbeten.</p>
-      <form action="#" method="post" class="mt-6 grid gap-4">
-        <input type="text" name="name" placeholder="Namn" required class="p-3 border rounded" />
-        <input type="email" name="email" placeholder="E-post" required class="p-3 border rounded" />
-        <textarea name="message" rows="4" placeholder="Meddelande" required class="p-3 border rounded"></textarea>
-        <button type="submit" class="bg-boldred text-white font-bold py-3 rounded hover:bg-red-700 transition">Skicka</button>
+  <!-- CONTACT -->
+  <section id="contact">
+    <div class="container">
+      <form id="contactForm" novalidate>
+        <h2 style="text-align:center">Contact</h2>
+        <div><label for="name">Name</label><input id="name" name="name" type="text" placeholder="Your name" required /></div>
+        <div><label for="email">Email</label><input id="email" name="email" type="email" placeholder="you@example.com" required /></div>
+        <div><label for="message">Message</label><textarea id="message" name="message" placeholder="Tell me about your project" required></textarea></div>
+        <button class="btn" type="submit">Send Message</button>
+        <p class="note">This demo form uses client‑side handling. Hook it to your backend, Formspree, or Netlify Forms when you’re ready.</p>
       </form>
     </div>
-    <img src="/images/workwithme.jpg" alt="Work with me" class="w-full h-full object-cover" />
   </section>
 
-  <!-- WORK WITH ME -->
-  <section class="bg-dark text-white flex items-center justify-between px-6 py-20">
-    <h2 class="text-5xl md:text-7xl font-extrabold uppercase text-boldred">Work With Me</h2>
-  </section>
-
-  <footer class="bg-dark text-white text-sm py-6 text-center">
-    <p>© <span id="year"></span> Alma Carlsson – Growth Marketing Portfolio</p>
-  </footer>
+  <footer>© <span id="year"></span> Your Name — All rights reserved.</footer>
 
   <script>
+    // Active section indicator
+    const sections = [...document.querySelectorAll('section')];
+    const links = [...document.querySelectorAll('.nav a')];
+    const byId = id => document.querySelector(`a[href="#${id}"]`);
+    const obs = new IntersectionObserver((entries)=>{
+      entries.forEach(e=>{
+        if(e.isIntersecting){
+          links.forEach(l=>l.classList.remove('active'));
+          const link = byId(e.target.id);
+          if(link) link.classList.add('active');
+        }
+      })
+    }, {rootMargin:'-45% 0px -45% 0px', threshold:0});
+    sections.forEach(s=>obs.observe(s));
+
+    // Contact form demo handler
+    document.getElementById('contactForm').addEventListener('submit', (e)=>{
+      e.preventDefault();
+      const form = e.currentTarget;
+      if(!form.reportValidity()) return;
+      alert('Thanks! Your message has been captured locally. Connect a backend to actually send it.');
+      form.reset();
+    });
+
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // =====================
+    // THEME TOGGLE LOGIC
+    // =====================
+    const root = document.documentElement;
+    const storageKey = 'theme-preference';
+
+    const getPreferredTheme = () => {
+      const saved = localStorage.getItem(storageKey);
+      if(saved === 'light' || saved === 'dark') return saved;
+      return window.matchMedia('(prefers-color-scheme: light)').matches ? 'light' : 'dark';
+    };
+
+    function applyTheme(mode){
+      const toggleBtn = document.getElementById('themeToggle');
+      if(mode === 'light'){
+        root.setAttribute('data-theme','light');
+        toggleBtn.setAttribute('aria-pressed','true');
+        toggleBtn.textContent = '☀️ Light';
+      } else {
+        root.removeAttribute('data-theme');
+        toggleBtn.setAttribute('aria-pressed','false');
+        toggleBtn.textContent = '🌙 Dark';
+      }
+    }
+
+    // Init
+    let current = getPreferredTheme();
+    applyTheme(current);
+
+    document.getElementById('themeToggle').addEventListener('click', ()=>{
+      current = (root.getAttribute('data-theme') === 'light') ? 'dark' : 'light';
+      localStorage.setItem(storageKey, current);
+      applyTheme(current);
+    });
   </script>
 </body>
 </html>
