--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
       <div class="grid">
         <!-- Project 1 -->
         <article class="card">
-          <a class="card__link" href="https://example.com/case-1" target="_blank" rel="noopener noreferrer" aria-label="Open Case 1 in a new tab">
+          <a class="card__link" href="https://www.canva.com/design/DAFxn3K-Zyw/WSuRFWIO-YxN6qSiBh9ocg/view?utm_content=DAFxn3K-Zyw&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h29c5f5b05d" target="_blank" rel="noopener noreferrer" aria-label="Open Case 1 in a new tab">
             <div class="card__img"><img src="images/project1.jpg" alt="Project 1 preview" /></div>
           </a>
           <div class="card__body">
-            <h3 class="card__title"><a href="https://example.com/case-1" target="_blank" rel="noopener noreferrer">Growth Case — Project One</a></h3>
-            <p class="card__text">Short impact line. e.g., +38% conversion in 6 weeks.</p>
+            <h3 class="card__title"><a href="https://www.canva.com/design/DAFxn3K-Zyw/WSuRFWIO-YxN6qSiBh9ocg/view?utm_content=DAFxn3K-Zyw&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h29c5f5b05d" target="_blank" rel="noopener noreferrer">CV Alma Carlsson</a></h3>
+            <p class="card__text">Work experience and life priorities</p>
           </div>
         </article>
         <!-- Project 2 -->
