--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <section id="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>I’m Alma, a curious and driven growth marketing student at Berghs School of Communication. I love experimenting, analyzing data, and finding creative ways to make ideas grow. My background is a mix of creativity and strategy, and I’m passionate about turning insights into action — whether that’s improving a user experience or testing bold new campaigns.</p>
+      <p>Jag anser att jag ska få Väl Godkänt (VG) eftersom jag har uppnått kursmålen. Jag har byggt en djup förståelse för ett datadrivet growth mindset och arbetat praktiskt med GA4, GTM och Looker Studio för att sätta upp event, analysera data och skapa dashboards. Min portfolio och mina demosidor visar tydligt hur jag omsatt kunskaperna i praktiken, inklusive spårning och visualisering av insikter. Genom att kombinera AI-stödd inlärning med eget experimenterande har jag fördjupat mig inom mätning, analys och teknisk implementation. Kursen har gett mig en stabil grund att driva datadrivna beslut och skapa tillväxt även i framtida projekt.</p>
     </div>
   </section>
 
@@ -165,12 +165,12 @@
         </article>
         <!-- Project 2 -->
         <article class="card">
-          <a class="card__link" href="https://example.org/case-2" target="_blank" rel="noopener noreferrer" aria-label="Open Case 2 in a new tab">
+          <a class="card__link" href="https://lookerstudio.google.com/s/pIuEpegwIHE" target="_blank" rel="noopener noreferrer" aria-label="Open Case 2 in a new tab">
             <div class="card__img"><img src="images/project2.jpg" alt="Project 2 preview" /></div>
           </a>
           <div class="card__body">
-            <h3 class="card__title"><a href="https://example.org/case-2" target="_blank" rel="noopener noreferrer">UX Study — Project Two</a></h3>
-            <p class="card__text">Bounce rate ↓12% after redesign + faster checkout.</p>
+            <h3 class="card__title"><a href="https://lookerstudio.google.com/s/pIuEpegwIHE" target="_blank" rel="noopener noreferrer">UX Study — Project Two</a></h3>
+            <p class="card__text">UX Report last 30 days - demo page.</p>
           </div>
         </article>
         <!-- Linkedin -->
