--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
     </div>
   </section>
 
-  <!-- PROJECTS -->
+  <!-- Links -->
   <section id="projects">
     <div class="container">
-      <h2>Projects</h2>
+      <h2>Links</h2>
       <div class="grid">
-        <!-- Project 1 -->
+        <!-- CV -->
         <article class="card">
           <a class="card__link" href="https://www.canva.com/design/DAFxn3K-Zyw/WSuRFWIO-YxN6qSiBh9ocg/view?utm_content=DAFxn3K-Zyw&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h29c5f5b05d" target="_blank" rel="noopener noreferrer" aria-label="Open Case 1 in a new tab">
             <div class="card__img"><img src="images/project1.jpg" alt="Project 1 preview" /></div>
@@ -163,7 +163,7 @@
             <p class="card__text">Work experience and life priorities</p>
           </div>
         </article>
-        <!-- Project 2 -->
+        <!-- Looker studio -->
         <article class="card">
           <a class="card__link" href="https://lookerstudio.google.com/s/pIuEpegwIHE" target="_blank" rel="noopener noreferrer" aria-label="Open Case 2 in a new tab">
             <div class="card__img"><img src="images/project2.jpg" alt="Project 2 preview" /></div>
