--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Portfolio — Bold Landing</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PMWFNHDC25"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PMWFNHDC25');
+  </script>
   <style>
     /* =====================
        THEME VARIABLES
@@ -192,16 +201,16 @@
     <div class="container">
       <form id="contactForm" novalidate>
         <h2 style="text-align:center">Contact</h2>
-        <div><label for="name">Name</label><input id="name" name="name" type="text" placeholder="Your name" required /></div>
+        <div><label for="name">Hejhej</label><input id="name" name="name" type="text" placeholder="Your name" required /></div>
         <div><label for="email">Email</label><input id="email" name="email" type="email" placeholder="you@example.com" required /></div>
         <div><label for="message">Message</label><textarea id="message" name="message" placeholder="Tell me about your project" required></textarea></div>
         <button class="btn" type="submit">Send Message</button>
-        <p class="note">If you want to be happy, be</p>
+        <p class="note">If you want to be happy, be happy</p>
       </form>
     </div>
   </section>
 
-  <footer>© <span id="year"></span> Alma Carlsson — All rights reserved.</footer>
+  <footer>© <span id="year"></span> Alma Carlsson — no rights reserved.</footer>
 
   <script>
     // Active section indicator
