--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fa-solid fa-wifi"></i>
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-list-ul"></i>
-            <span id="clock">Fri 20 Feb 19:12</span>
+            <span id="clock">Loading...</span>
         </div>
     </header>
 
