--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
 </head>
 <body>
 
-    <header class="menu-bar">
-        <div class="left-menu">
-            <i class="fa-brands fa-apple apple-logo"></i>
-            <span class="app-name"><b>Alma Carlsson</b></span>
-            <span>File</span>
-            <span>Edit</span>
-            <span>View</span>
-            <span>Go</span>
-            <span>Window</span>
-            <span>Help</span>
-        </div>
-        <div class="right-menu">
-            <i class="fa-solid fa-wifi"></i>
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-list-ul"></i>
-            <span id="clock">Loading...</span>
-        </div>
-    </header>
+<header class="menu-bar">
+    <div class="left-menu">
+        <i class="fa-brands fa-apple apple-logo"></i>
+        <span class="app-name"><b>Alma Carlsson</b></span>
+        <span>File</span>
+        <span>Edit</span>
+        <span>View</span>
+        <span>Go</span>
+        <span>Window</span>
+        <span onclick="showHelp()" style="cursor: pointer;">Help</span>
+    </div>
+    <div class="right-menu">
+        <i class="fa-solid fa-wifi"></i>
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-list-ul"></i>
+        <span id="clock">Loading...</span>
+    </div>
+</header>
+
+<div id="help-popup" class="help-toast">
+    <div class="toast-content">
+        <span class="fire-emoji">🔥</span>
+        <p>SOS! You're on fire today!</p>
+        <button onclick="closeHelp()" class="toast-close">×</button>
+    </div>
+</div>
 
     <main class="desktop">
         <div class="icon-layer">
             <a href="#" class="desktop-icon" id="icon-case1" onclick="openWindow('case1-popup')">
                 <div class="icon-img-wrapper">
-                <img src="images/husqvarna-logo.png" alt="Husqvarna">
-            </div>
-            <span>Case: Husqvarna</span>
+                    <img src="images/husqvarna-logo.png" alt="Husqvarna">
+                </div>
+                <span>Case: Husqvarna</span>
             </a>
             <a href="#" class="desktop-icon" id="icon-case2" onclick="openWindow('case2-popup')">
                 <div class="icon-img-wrapper"><img src="images/icon2.png" alt=""></div>
@@ -62,7 +70,9 @@
         <a href="https://google.com" target="_blank" class="dock-item" title="Safari"><i class="fa-solid fa-compass"></i></a>
         <a href="https://www.linkedin.com/in/alma-carlsson-3710a2294/" target="_blank" class="dock-item" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
         <a href="mailto:alma.carlsson@gmail.com" class="dock-item" title="Email"><i class="fa-solid fa-envelope"></i></a>
-        <a href="https://www.littlevintagephotobooth.com/" target="_blank" class="dock-item" title="Camera"><i class="fa-solid fa-camera"></i></a>
+        <a href="javascript:void(0)" class="dock-item" title="Camera" onclick="openWindow('camera-popup')">
+            <i class="fa-solid fa-camera"></i>
+        </a>
         <a href="javascript:void(0)" class="dock-item" title="Calculator" onclick="openWindow('calculator-popup')">
             <i class="fa-solid fa-calculator"></i>
         </a> 
@@ -202,6 +212,20 @@
     </div>
 
     <script src="script.js"></script>
+
+    <div id="camera-popup" class="window-overlay">
+    <div class="window" style="width: 700px; height: 650px; background: #d35207;">
+        <div class="window-header">
+            <div class="dot red" onclick="stopCamera()"></div> <div class="dot yellow"></div><div class="dot green"></div>
+            <span class="window-title">Camera</span>
+        </div>
+        <div class="window-content" style="display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative;">
+            <video id="webcam" autoplay playsinline style="width: 100%; height: auto; transform: scaleX(-1);"></video>
+            <button onclick="takePhoto()" style="position: absolute; bottom: 20px; width: 50px; height: 50px; border-radius: 50%; border: 5px solid white; background: red; cursor: pointer;"></button>
+            <canvas id="photo-canvas" style="display:none;"></canvas>
+        </div>
+    </div>
+</div>
 
     <div id="calculator-popup" class="window-overlay">
         <div class="window" style="width: 320px; height: 465px; background: #1c1c1c; border: 1px solid #444;">
