--- a/index.html
+++ b/index.html
@@ -156,26 +156,59 @@
     </div>
 </div>
 
-    <div id="case3-popup" class="window-overlay">
-        <div class="window">
-            <div class="window-header">
-                <div class="dot red" onclick="closeWindow('case3-popup')"></div>
-                <div class="dot yellow"></div><div class="dot green"></div>
-                <span class="window-title">Merch Design</span>
+  <div id="case3-popup" class="window-overlay">
+    <div class="window">
+        <div class="window-header">
+            <div class="dot red" onclick="closeWindow('case3-popup')"></div>
+            <div class="dot yellow"></div>
+            <div class="dot green"></div>
+            <span class="window-title">AI Content Gallery</span>
+        </div>
+        <div class="window-content">
+            <div class="editorial-header">
+                <h1>AI CONTENT</h1>
+                <p class="tagline">Created by me.</p>
             </div>
-            <div class="window-content">
-                <h1>Merch Design</h1>
-                <img src="images/case3-landscape.jpg" class="landscape-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                <div class="image-placeholder" style="display:none;">Landscape Image Placeholder</div>
-                <div class="project-text">
-                    <h3>The Strategy</h3>
-                    <p>Detail how you translated a brand into physical products and apparel.</p>
-                    <h3>The Result</h3>
-                    <p>Discuss the production quality, material choices, and the impact the merchandise had on the community or audience.</p>
+            
+            <div class="pinterest-grid">
+                <div class="grid-item"><img src="images/ai1.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai2.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai3.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai4.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai5.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai6.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai7.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai8.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai9.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai10.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai11.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai12.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai13.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                
+                <div class="grid-item">
+                    <video src="images/ai14.mp4" autoplay loop muted playsinline style="width:100%; display:block; border-radius:12px;"></video>
                 </div>
+
+                <div class="grid-item"><img src="images/ai15.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai16.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai17.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai18.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai19.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai20.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai21.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai22.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai23.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai24.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai25.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai26.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai27.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai28.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai29.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
+                <div class="grid-item"><img src="images/ai30.png" alt="AI Content" onclick="openLightbox(this.src)"></div>
             </div>
         </div>
     </div>
+</div>
 
     <div id="case4-popup" class="window-overlay">
         <div class="window">
@@ -292,5 +325,10 @@
             </div>
         </div>
     </div>
+
+    <div id="lightbox" class="lightbox-overlay" onclick="closeLightbox()">
+    <img class="lightbox-content" id="lightbox-img" alt="Enlarged view">
+</div>
+</div>
 </body>
 </html>
