--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="icon-layer">
             <a href="#" class="desktop-icon" id="icon-case1" onclick="openWindow('case1-popup')">
                 <div class="icon-img-wrapper">
-                    <img src="images/husqvarna-logo.png" alt="Husqvarna">
+                    <img src="images/icon1.png" alt="Husqvarna">
                 </div>
                 <span>Case: Husqvarna</span>
             </a>
@@ -50,11 +50,11 @@
             </a>
             <a href="#" class="desktop-icon" id="icon-case3" onclick="openWindow('case3-popup')">
                 <div class="icon-img-wrapper"><img src="images/icon3.png" alt=""></div>
-                <span>Merch Design</span>
+                <span>AI Gallery</span>
             </a>
             <a href="#" class="desktop-icon" id="icon-case4" onclick="openWindow('case4-popup')">
                 <div class="icon-img-wrapper"><img src="images/icon4.png" alt=""></div>
-                <span>Brand Identity</span>
+                <span>Case: DryPops</span>
             </a>
             <a href="#" class="desktop-icon" id="icon-case5" onclick="openWindow('case5-popup')">
                 <div class="icon-img-wrapper"><img src="images/icon5.png" alt=""></div>
@@ -65,6 +65,7 @@
                 <span>Photography</span>
             </a>
         </div>
+
 <div class="dock-container">
     <div class="dock">
         <a href="https://google.com" target="_blank" class="dock-item" title="Safari"><i class="fa-solid fa-compass"></i></a>
@@ -101,6 +102,10 @@
                         Yet the people who need nature the most, the elderly, the immobile, the vulnerable, are the ones least able to access it.
                         Green Goggles brings nature inside.
                         By using immersive technology, Husqvarna transforms indoor spaces into restorative green environments, creating the world’s greenest therapy room and restoring access to nature when physical access is no longer possible.</p>
+                </div>
+                <div class="case-images-row">
+                    <video src="images/greengoggles.mp4" class="landscape-img" autoplay loop muted playsinline></video>
+                     <img src="images/greengogglesimage.png" class="landscape-img" onclick="openLightbox(this.src)">
                 </div>
             </div>
         </div>
@@ -215,18 +220,22 @@
             <div class="window-header">
                 <div class="dot red" onclick="closeWindow('case4-popup')"></div>
                 <div class="dot yellow"></div><div class="dot green"></div>
-                <span class="window-title">Brand Identity</span>
+                <span class="window-title">Case: DryPops</span>
             </div>
             <div class="window-content">
-                <h1>Brand Identity</h1>
+                <h1>DryPops</h1>
                 <img src="images/case4-landscape.jpg" class="landscape-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
                 <div class="image-placeholder" style="display:none;">Landscape Image Placeholder</div>
                 <div class="project-text">
-                    <h3>The Concept</h3>
-                    <p>Logo development, typography, and color theory used to build this brand.</p>
-                    <h3>The Execution</h3>
-                    <p>How the identity was rolled out across different platforms to maintain a cohesive brand voice.</p>
-                </div>
+                    <h3>The Brief</h3>
+                    <p>How can start-up brand DryPops use performance marketing on TikTok to gain insights of target audience and brand developement for up and coming product launch? </p>
+                    <h3>The Solution</h3>
+                    <p> 
+                    </p>
+                        <div class="video-grid-portrait">
+                        <video src="images/drypops1.mp4" class="portrait-video" autoplay loop muted playsinline></video>
+                        <video src="images/drypops2.mp4" class="portrait-video" autoplay loop muted playsinline></video>
+                 </div>
             </div>
         </div>
     </div>
