--- a/index.html
+++ b/index.html
@@ -164,44 +164,43 @@
                 </div>
 
                 <hr class="header-divider" style="border:none; border-bottom:2px solid #000; margin: 10px 0 30px 0;">
-
-                <div class="pinterest-grid">
-                    <div class="grid-item"><img src="images/ai1.png"></div>
-                    <div class="grid-item"><img src="images/ai2.png"></div>
-                    <div class="grid-item"><img src="images/ai3.png"></div>
-                    <div class="grid-item"><img src="images/ai4.png"></div>
-                    <div class="grid-item"><img src="images/ai5.png"></div>
-                    <div class="grid-item"><img src="images/ai6.png"></div>
-                    <div class="grid-item"><img src="images/ai7.png"></div>
-                    <div class="grid-item"><img src="images/ai8.png"></div>
-                    <div class="grid-item"><img src="images/ai9.png"></div>
-                    <div class="grid-item"><img src="images/ai10.png"></div>
-                    <div class="grid-item"><img src="images/ai11.png"></div>
-                    <div class="grid-item"><img src="images/ai12.png"></div>
-                    <div class="grid-item"><img src="images/ai13.png"></div>
-                    <div class="grid-item">
-                        <video src="images/ai14.mp4" autoplay loop muted playsinline style="width:100%; border-radius:12px;"></video>
+                    <div class="pinterest-grid">
+                        <div class="grid-item"><img src="images/ai1.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai2.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai3.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai4.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai5.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai6.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai7.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai8.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai9.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai10.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai11.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai12.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai13.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item">
+                            <video src="images/ai14.mp4" autoplay loop muted playsinline style="width:100%; border-radius:12px;"></video>
+                        </div>
+                        <div class="grid-item"><img src="images/ai15.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai16.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai17.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai18.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai19.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai20.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai21.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai22.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai23.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai24.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai25.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai26.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai27.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai28.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai29.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai30.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai31.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai32.png" onclick="openLightbox(this.src)"></div>
+                        <div class="grid-item"><img src="images/ai33.png" onclick="openLightbox(this.src)"></div>
                     </div>
-                    <div class="grid-item"><img src="images/ai15.png"></div>
-                    <div class="grid-item"><img src="images/ai16.png"></div>
-                    <div class="grid-item"><img src="images/ai17.png"></div>
-                    <div class="grid-item"><img src="images/ai18.png"></div>
-                    <div class="grid-item"><img src="images/ai19.png"></div>
-                    <div class="grid-item"><img src="images/ai20.png"></div>
-                    <div class="grid-item"><img src="images/ai21.png"></div>
-                    <div class="grid-item"><img src="images/ai22.png"></div>
-                    <div class="grid-item"><img src="images/ai23.png"></div>
-                    <div class="grid-item"><img src="images/ai24.png"></div>
-                    <div class="grid-item"><img src="images/ai25.png"></div>
-                    <div class="grid-item"><img src="images/ai26.png"></div>
-                    <div class="grid-item"><img src="images/ai27.png"></div>
-                    <div class="grid-item"><img src="images/ai28.png"></div>
-                    <div class="grid-item"><img src="images/ai29.png"></div>
-                    <div class="grid-item"><img src="images/ai30.png"></div>
-                    <div class="grid-item"><img src="images/ai31.png"></div>
-                    <div class="grid-item"><img src="images/ai32.png"></div>
-                    <div class="grid-item"><img src="images/ai33.png"></div>
-                </div>
             </div>
         </div>
     </div>
